improve FOUT: use Helvetica as fallback font (one of the most available system font) and tweak letter-spacing to mimic corresponding size of the Noto Sans fonts so that there is minimal layout shift => no longer need to re-calculate header and footer height once fonts are loaded

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@400;500&family=Noto+Sans:wght@400;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@400;500&family=Noto+Sans:wght@400;600;800&display=swap');
 
 .cb-container {
   padding: 22px 24px;
-  font-family: 'Noto Sans Display', sans-serif;
+  font-family: 'Noto Sans Display', Helvetica, sans-serif;
   color: #101d40;
   background-color: #fff;
 }
@@ -16,28 +16,51 @@
 }
 
 .cb-title {
-  font-family: 'Noto Sans', sans-serif;
-  font-size: 18px;
+  font-family: Helvetica, sans-serif;
   font-weight: 800;
+  letter-spacing: -0.764px;
+  font-size: 18px;
   line-height: 22px;
 }
 
+.cb-title.cb-font-loaded {
+  font-family: 'Noto Sans', Helvetica, sans-serif;
+  letter-spacing: unset;
+}
+
 .cb-container.cb-small .cb-title {
+  letter-spacing: 0.098px;
   font-size: 15px;
   font-weight: 600;
   line-height: 18px;
 }
 
+.cb-container.cb-small .cb-title.cb-font-loaded {
+  letter-spacing: unset;
+}
+
 .cb-subtitle {
+  font-family: Helvetica, sans-serif;
+  letter-spacing: 0.21px;
   font-weight: 500;
   font-size: 17px;
   line-height: 22px;
   color: #586179;
 }
 
+.cb-subtitle.cb-font-loaded {
+  font-family: 'Noto Sans Display', Helvetica, sans-serif;
+  letter-spacing: unset;
+}
+
 .cb-container.cb-small .cb-subtitle {
+  letter-spacing: 0.098px;
   font-size: 15px;
   line-height: 18px;
+}
+
+.cb-container.cb-small .cb-subtitle.cb-font-loaded {
+  letter-spacing: unset;
 }
 
 .cb-tool {
@@ -85,7 +108,7 @@
 }
 
 .cb-floating {
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Noto Sans', Helvetica, sans-serif;
   font-size: 14px;
   line-height: 18px;
   border: 1px solid #dee3e9;
@@ -105,15 +128,26 @@
 }
 
 .cb-footer {
-  font-family: 'Noto Sans', sans-serif;
+  font-family: Helvetica, sans-serif;
+  letter-spacing: 0.44px;
   font-size: 14px;
   line-height: 18px;
   color: #586179;
 }
 
+.cb-footer.cb-font-loaded {
+  font-family: 'Noto Sans', Helvetica, sans-serif;
+  letter-spacing: unset;
+}
+
 .cb-container.cb-small .cb-footer {
+  letter-spacing: 0.34px;
   font-size: 13px;
   line-height: 16px;
+}
+
+.cb-container.cb-small .cb-footer.cb-font-loaded {
+  letter-spacing: unset;
 }
 
 .cb-footer p {
@@ -139,14 +173,14 @@
 }
 
 .cb-control {
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Noto Sans', Helvetica, sans-serif;
   font-size: 14px;
   flex: 1;
   padding: 5px 8px;
   min-width: 200px;
 }
 .cb-control-standalone {
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Noto Sans', Helvetica, sans-serif;
   font-size: 14px;
   flex: 1;
   min-width: 200px;
